Fixes vanilla material compatibility