@@ -7,6 +7,7 @@ import dev.anhcraft.oreprocessor.api.util.MaterialClass;
 import dev.anhcraft.oreprocessor.api.util.UMaterial;
 import dev.anhcraft.oreprocessor.integration.adder.ItemCustomizer;
 import dev.anhcraft.oreprocessor.integration.adder.OraxenBridge;
+import dev.anhcraft.oreprocessor.integration.adder.VanillaBridge;
 import dev.anhcraft.oreprocessor.integration.shop.EconomyShopGUIBridge;
 import dev.anhcraft.oreprocessor.integration.shop.ShopGuiPlusBridge;
 import dev.anhcraft.oreprocessor.integration.shop.ShopProvider;
@@ -15,7 +16,6 @@ import org.jetbrains.annotations.Nullable;
 import java.lang.reflect.Constructor;
 import java.lang.reflect.InvocationTargetException;
 import java.util.*;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 public class IntegrationManager {
@@ -25,6 +25,8 @@ public class IntegrationManager {
 
     public IntegrationManager(OreProcessor mainPlugin) {
         this.mainPlugin = mainPlugin;
+
+        itemCustomizers.put(MaterialClass.VANILLA, new VanillaBridge());
 
         tryHook("AuraSkills", AuraSkillsBridge.class);
         tryHook("AureliumSkills", AureliumSkillsBridge.class);
@@ -92,7 +94,7 @@ public class IntegrationManager {
     public Set<String> getAllMaterials() {
         Set<String> result = new HashSet<>();
         for (ItemCustomizer integration : itemCustomizers.values()) {
-            result.addAll(integration.getCustomMaterials().stream().map(UMaterial::toString).collect(Collectors.toList()));
+            result.addAll(integration.getCustomMaterials().stream().map(UMaterial::toString).toList());
         }
         return result;
     }
